fix: overflow-x

--- a/client/styles/less/parallax.less
+++ b/client/styles/less/parallax.less
@@ -7,6 +7,7 @@
   perspective: 300px;
   transform-style: preserve-3d;
   overflow-y: auto;
+  overflow-x: hidden;
 
   .group{
     position: relative;
